--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,6 +43,8 @@ jobs:
         id: build
         run: go run github.com/magefile/mage
       - name: Test
+        env:
+          GINKGO_LABEL_FILTER: "!time-sensitive"
         run: go run github.com/magefile/mage test
       - name: Log in to Docker Hub
         if: ${{ github.event_name != 'pull_request_target' }}
