--- a/docs/config.toml
+++ b/docs/config.toml
@@ -71,7 +71,7 @@ weight = 1
 # Comment out this section to disable the "Print entire section" feature
 # See https://www.docsy.dev/docs/adding-content/print/
 [outputs]
-section = [ "HTML", "RSS", "print" ]
+section = [ "HTML" ]
 
 # Everything below this are Site Params
 
